--- a/Backend/BoardRoomAllocation/.classpath
+++ b/Backend/BoardRoomAllocation/.classpath
@@ -26,5 +26,33 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/divya.ramesh/.m2/repository/org/hibernate/hibernate-core/4.2.1.Final/hibernate-core-4.2.1.Final.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="org.eclipse.jst.component.archivename" value="hibernate-core-4.2.1.Final.jar"/>
+			<attribute name="maven.groupId" value="org.hibernate"/>
+			<attribute name="maven.artifactId" value="hibernate-core"/>
+			<attribute name="maven.version" value="4.2.1.Final"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/divya.ramesh/.m2/repository/org/hibernate/hibernate-core/5.1.6.Final/hibernate-core-5.1.6.Final.jar" sourcepath="C:/Users/divya.ramesh/.m2/repository/org/hibernate/hibernate-core/5.1.6.Final/hibernate-core-5.1.6.Final-sources.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="maven.groupId" value="org.hibernate"/>
+			<attribute name="maven.artifactId" value="hibernate-core"/>
+			<attribute name="maven.version" value="5.1.6.Final"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/divya.ramesh/.m2/repository/net/sf/ehcache/ehcache/2.10.1/ehcache-2.10.1.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="maven.groupId" value="net.sf.ehcache"/>
+			<attribute name="maven.artifactId" value="ehcache"/>
+			<attribute name="maven.version" value="2.10.1"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
